Go back to Java 21 for Pitest